[workspace]
resolver = "2"
members = [
    "stable-swap-anchor/",
    "stable-swap-client/",
    "stable-swap-math/",
    "stable-swap-math/sim",
    "stable-swap-program/program",
]
exclude = ["fuzz"]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
